fixed mobile layout issues on home page

--- a/app/assets/stylesheets/components/_cardtrip.scss
+++ b/app/assets/stylesheets/components/_cardtrip.scss
@@ -2,10 +2,7 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  width: 500px;
-  margin-left: 60px;
-  margin-bottom: 60px;
-  margin-top: 60px;
+  margin: 60px;
 }
 
 .card-trip > img {
